--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
   - "3.5"
   - "3.6"
 
-install: pip install -r requirements_tests.txt
+install:
+  - pip install -r requirements_tests.txt
+  - pip install tox-travis
 
 script: tox
