Trying to fix travis build
Signed-off-by: Eran Kampf <eran@ekampf.com>

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ commands =
     pylint --rcfile=.pylintrc --output-format=parseable sanic_sentry
     pytest {toxinidir}/tests
 deps =
+    -e{toxinidir}
     -r{toxinidir}/requirements_tests.txt
 basepython =
     py36: python3.6
