--- a/requirements_tests.txt
+++ b/requirements_tests.txt
@@ -1,6 +1,6 @@
-pylint
-pytest
-pytest-sugar
-pytest-sanic
-pytest-mock
-flask
+pylint==1.8.2
+pytest==3.3.2
+pytest-mock==1.6.3
+pytest-sanic==0.1.6
+pytest-sugar==0.9.0
+Flask==0.12.2
