--- a/requirements_tests.txt
+++ b/requirements_tests.txt
@@ -1,6 +1,6 @@
-pylint==1.8.2
-pytest==3.3.2
-pytest-mock==1.6.3
-pytest-sanic==0.1.6
-pytest-sugar==0.9.0
+pylint~=2.1.1
+pytest~=3.8.0
+pytest-mock~=1.10.0
+pytest-sanic~=0.1.13
+pytest-sugar~=0.9.1
 Flask==1.0.2
